--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,18 +5,13 @@
   padding: 0;
   box-sizing: inherit;
 }
-
 html,
 body {
-    font-family: Arial, sans-serif;
     height: 100%;
     margin: 0;
     padding: 0;
 }
-.container {
-    height: 100%;
-    position: relative;
-}
+
 input {
     font-size: 12px;
 }
@@ -30,7 +25,19 @@ h1 {
 #show-listings {
     width: 48%;
 }
+.main__body {
+    height: 80vh;
+
+}
+
+.map_container {
+    position: relative;
+    width: 100%;
+    height: 100% ;
+}
+
 #map {
+    position: absolute;
     width: 100%;
     height: 100%;
     
