--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,63 +1,53 @@
-*,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit;
-}
-html,
 body {
-    height: 100%;
+    font-family: 'Muli', sans-serif; 
+}
+#sidebar {
+    background: #2c3e50;
+    min-width: 270px;
+}
+.sidebar__column {
+    background: #2c3e50;
+}
+.sidebar__header {
+    padding: 15px 5px;
+    font-size: 1.6rem
+}
+.sidebar__hr {
+    margin: 30px 0;
+    border-top: 1px solid rgba(255,255,255,1);
+}
+.sidebar__list {
+    padding: 5px 5px;
+    font-size: 1.1rem;
+    color: #f9f9f9; 
+    cursor: pointer;
+}
+.sidebar__search {
+    width: 100%;
+    font-size: 1rem;
+    border-radius: 3px; 
+   
+}
+.infoWindow {
+    background: #2c3e50
+}
+.infoWindow__title {
+    font-size: 1rem;
     margin: 0;
-    padding: 0;
 }
+.infoWindow__subtitle {
+    font-size: 0.9rem;
+    margin:0 0 10px 0; 
 
-input {
-    font-size: 12px;
 }
-h1 {
-    color: #525454;
-    font-size: 22px;
-    margin: 0 0 10px 0;
+.infoWindow__paragraph {
+    font-size: 0.8rem;
+    line-height: 2px;
+}
+.map_error {
+    color: white;
+    position: absolute;
+    top: 50%;
+    width: 100%;
     text-align: center;
 }
-#hide-listings,
-#show-listings {
-    width: 48%;
-}
-.main__body {
-    height: 80vh;
-
-}
-
-.map_container {
-    position: relative;
-    width: 100%;
-    height: 100% ;
-}
-
-#map {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    
-}
-.options-box {
-    background: #fff;
-    border: 1px solid #999;
-    border-radius: 3px;
-    height: 100%;
-    line-height: 35px;
-    padding: 10px 10px 30px 10px;
-    text-align: left;
-    width: 340px;
-}
-
-#pano {
-    width: 200px;
-    height: 200px;
-    }
-    .text {
-        font-size: 12px;
-    }
-
